--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>wildcat-music-connect</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>NoteBridge</title>
+    <meta name="description" content="NoteBridge - Connect and Learn Music" />
+    <meta name="author" content="NoteBridge" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpeg" href="/Northwestern-logo.jpeg" />
 
-    <meta property="og:title" content="wildcat-music-connect" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="NoteBridge" />
+    <meta property="og:description" content="NoteBridge - Connect and Learn Music" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
